--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "akin holo",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   }
